tests/ui/static/static-mut-not-constant.stderr
error[E0010]: allocations are not allowed in statics
  --> $DIR/static-mut-not-constant.rs:1:28
   |
LL | static mut a: Box<isize> = Box::new(3);
   |                            ^^^^^^^^^^^ allocation not allowed in statics

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0010`.
